# vldt

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  setup.py
.github/workflows/: build_and_publish.yaml  run_tests.yaml
load_test/: load_test.py  pydantic_model_user.py  vldt_model_user.py
src/: data_model.cpp  data_model.hpp  error_handling.hpp  init_globals.cpp  init_globals.hpp  vldt_module.cpp
src/conversion/: dict_utils.cpp  dict_utils.hpp  json_utils.cpp  json_utils.hpp  rapidjson_to_pyobject.cpp  rapidjson_to_pyobject.hpp
src/schema/: deserializer.cpp  deserializer.hpp  schema.cpp  schema.hpp
src/validation/: validation.cpp  validation.hpp  validation_containers.cpp  validation_containers.hpp  validation_primitives.cpp  validation_primitives.hpp  validation_validators.cpp  validation_validators.hpp
tests/: conftest.py  models.py  test_async_validators.py  test_class_vars.py  test_deserialization.py  test_dict.py  test_docs.py  test_fields.py  test_json.py  test_set_attr.py  test_types.py  test_validators.py  test_vldt.py
vldt/: __init__.py  config.py  deserializer.py  fields.py  models.py  models.pyi  validators.py
