[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vldt"
version = "0.1.2"
authors = [
    { name = "Roman Right", email = "roman-right@protonmail.com" }
]
description = "High-Performance Data Validation for Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typing_extensions>=4.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests"
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
